--- a/css/page.css
+++ b/css/page.css
@@ -1,5 +1,4 @@
 html, body {
-  background-color: #121926;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -11,4 +10,38 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@import url("https://use.typekit.net/pfa8cxp.css");
+
+body {
+  font-family: 'canada-type-gibson', 'gibson', sans-serif;
+  font-style: normal;
+  font-weight: 200;
+  background-color: #161a1e;
+  min-width: 600px;
+  min-height: 400px;
+  color: #ffffff;
+}
+
+.infrable-logo {
+  text-align: center;
+  justify-content: center;
+}
+
+.headline {
+  font-size: 36px;
+  font-weight: 200;
+}
+
+.email {
+  text-align: center;
+  justify-content: center;  
+  color: #24c0d1;
+  text-decoration: none;
+}
+
+p {
+  font-size: 16px;
+  color: #ffffff;
 }
