--- a/css/page.css
+++ b/css/page.css
@@ -1,4 +1,8 @@
-@import url('https://use.typekit.net/pfa8cxp.css');
+@import url('https://rsms.me/inter/inter.css');
+html { font-family: 'Inter', sans-serif; }
+@supports (font-variation-settings: normal) {
+  html { font-family: 'Inter var', sans-serif; }
+}
 
 html, body {
   width: 100%;
@@ -15,13 +19,17 @@ body {
 }
 
 body {
-  font-family: 'canada-type-gibson', 'gibson', sans-serif;
-  font-style: normal;
-  font-weight: 200;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   background-color: #161a1e;
   min-width: 600px;
   min-height: 400px;
   color: #ffffff;
+  margin: 20px;
+  letter-spacing: -0.5px;
+}
+
+.container {
+  width: 80%;
 }
 
 .infrable-logo {
@@ -34,8 +42,9 @@ body {
 }
 
 .headline {
-  font-size: 36px;
-  font-weight: 200;
+  font-size: 32px;
+  font-weight: 400;
+  letter-spacing: -0.7px;
 }
 
 .email {
@@ -46,6 +55,6 @@ body {
 }
 
 p {
-  font-size: 16px;
+  font-size: 12px;
   color: #ffffff;
 }
